Started "two" branch Added jndi resource in Config.groovy (needed for jbpm in dev mode now that we use the Tomcat plugin) Removed searchable plugin (searching is now broken until we add Solr) Removed contextPath from paths in editor.gsp, list.gsp,main.gsp Set heap and perm space size in run.sh Removed web.xml